[package]
name = "feth-rs"
version = "0.1.0"
edition = "2024"

[features]
tokio = ["dep:tokio"]

[dependencies]
libc = "0.2"
nix = { version = "0.29", features = ["ioctl"] }
tokio = { version = "1", features = ["net"], optional = true }

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["net", "rt", "macros"] }

[[example]]
name = "fethctl"
required-features = ["tokio"]

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Unavoidable in FFI / ioctl code
ptr_as_ptr = "allow"
borrow_as_ptr = "allow"
ref_as_ptr = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_ptr_alignment = "allow"
# Common pedantic false positives
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
